# queryGym

./: .env.example  .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  Structure.md  output_concat.tsv  output_plain.tsv  output_q2e_concat.tsv  output_q2e_plain.tsv  pyproject.toml  test_setup.py
docs/: CLI.md  DATASETS.md  DEVELOPMENT.md  PROMPTS.md  SEARCHER_INTERFACE.md
examples/: 01_load_from_file.py  02_load_with_loaders.py  03_query_reformulation.py  04_context_reformulation.py  05_using_adapters.py  README.md  complete_workflow.py  pyserini_integration.py  searcher_interface_example.py  simple_usage.py  tiny_contexts.jsonl  tiny_qrels.txt  tiny_queries.tsv  user_searcher_integration.py
queryGym/: __init__.py  cli.py  datasets.yml  prompt_bank.yaml  pyserini_bridge.py  retrieve_context.py
queryGym/adapters/: __init__.py  pyserini_adapter.py  pyterrier_adapter.py
queryGym/config/: defaults.yaml
queryGym/core/: base.py  prompts.py  registry.py  runner.py  searcher.py  searcher_wrappers.py  utils.py
queryGym/data/: dataloader.py
queryGym/loaders/: __init__.py  beir.py  msmarco.py
queryGym/methods/: __init__.py  csqe.py  genqr.py  genqr_ensemble.py  lamer.py  mugi.py  qa_expand.py  query2doc.py  query2e.py
queryreform/: cli.py  prompt_bank.yaml
queryreform/core/: base.py  llm.py  prompts.py
queryreform/methods/: __init__.py  lamer.py  query2doc.py  query2e.py
scripts/: retrieve_context.py  templated_retrieval.sh
tests/: test_cli_script_gen.py  test_dataloader.py  test_methods_genqr.py  test_prompts.py
